xrpl-wasm-stdlib/xrpl-macros/tests/pubkey/fail_non_literal.stderr
error: expected string literal
 --> tests/pubkey/fail_non_literal.rs:5:13
  |
5 |     pubkey!(hex);
  |             ^^^
